<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Food Order Sheet</string>
    <string name="restaurant_name">博多豚骨 幸龍</string>
    <string name="about_us_bt_changelog" translatable="false">Update History</string>
    <string name="app_version">Version</string>

    <!-- Order List Name -->
    <string name="food_tab1_name">ラーメン</string>
    <string name="food_tab2_name">トッピング</string>
    <string name="food_tab3_name">サイドメニュー</string>
    <string name="food_tab4_name">ご飯もの</string>
    <string name="food_tab5_name">お飲み物</string>

    <!-- Order Tab1 Name -->
    <string name="header_ramen">ラーメン</string>
    <string name="hakata_ramen_name">博多豚骨ラーメン</string>
    <string name="hakata_ramen_description">やっぱり定番！</string>
    <string name="shio_ramen_name">あっさり塩豚骨ラーメン</string>
    <string name="shio_ramen_description">豚骨ラーメンが苦手な方に！</string>
    <string name="kuro_ramen_name">黒ラーメン</string>
    <string name="kuro_ramen_description">特製マー油を使用</string>
    <string name="aka_ramen_name">赤ラーメン</string>
    <string name="aka_ramen_description">業界初！明太子油使用</string>
    <string name="tokumori_ramen_name">とくもり！ラーメン</string>
    <string name="tokumori_ramen_description">デブになるぜ～（＾ω＾）</string>
    <string name="size_normal">普通</string>
    <string name="size_small">Mini</string>
    <string name="ramen_indication">量・硬さなど</string>
    <string name="ramen_notice">☆ベースのラーメンには写真通りのトッピングが含まれています。</string>

    <!-- Order Tab2 Name -->
    <string name="header_topping">トッピング</string>
    <string name="charsiu_name">叉焼３切れ</string>
    <string name="ajitama_name">味玉</string>
    <string name="nori_name">海苔</string>
    <string name="aonegi_name">青ねぎ３倍量</string>
    <string name="moyashi_name">もやし</string>
    <string name="kikurage_name">キクラゲ３倍量</string>
    <string name="memma_name">メンマ</string>
    <string name="header_kaedama">替え玉</string>
    <string name="kaedama_before">お先</string>
    <string name="kaedama_after">お後</string>
    <string name="kaedama_notice">※スープは残しておいてください。</string>

    <!-- Order Tab3 Name -->
    <string name="header_side_menu">サイドメニュー</string>
    <string name="sub_menu1">一品料理</string>
    <string name="sub_menu2">ご飯もの</string>
    <string name="gyoza5_name">博多一口餃子５個</string>
    <string name="karaage5_name">博多唐揚げ５個</string>
    <string name="yasai_itame_name">野菜炒め</string>
    <string name="charhan_name">チャーハン</string>
    <string name="charhan_mini_name">ミニチャーハン</string>
    <string name="char_siu_don_name">叉焼丼</string>
    <string name="mentai_don_name">明太丼</string>
    <string name="shiro_gohan_name">白ごはん</string>
    <string name="side_indication">お好み指定</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="allergic">I\'m Allergic</string>
    <string name="dont_eat">I don\'t eat</string>
    <string name="allergic_to">I\'m Allergic to</string>

    <string name="nav_menu_reader">Check In</string>
    <string name="nav_food_menu">Food/Drink Ordering</string>
    <string name="nav_order_sheet">Ordering History</string>
    <string name="nav_payment">Check Out</string>
    <string name="nav_app_settings">Settings</string>
    <string name="nav_about_us">About App</string>

    <string name="food_msg_not_allergic">I\'m not allergic to any type of food</string>
    <string name="food_msg_not_picker">I\'m not picker with the food</string>

    <string name="cow">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="pork">Pork</string>
    <string name="fish">Fish</string>
    <string name="cheese">Cheese</string>
    <string name="milk">Milk</string>
    <string name="pepper">Pepper</string>

    <string name="app_settings_turn_serious_mode_on">Turn Serious Mode On :(</string>
    <string name="app_settings_show_help_dialog">Show help Dialog</string>

    <string name="no_config_msg">To be able to show your Food Restrictions you have to configure it first</string>
    <string name="help_title">How does it works?</string>
    <string name="help_message">1) You have to configure this application using the menu option \'My Restrictions\' to tell it which type of food you are allergic and which type of food you don\'t eat.\n\n 2) Next you will be able to choose in between a graphical version \'Show Icons\' or a text version \'Show texts\' to let people know more about your food restrictions.</string>
    <string name="help_not_show">Do not show it again</string>


    <string name="select_a_language">Language to show</string>
    <string name="message_below_name">What do you want to eat?</string>
    <string name="message_allergic_to">Hi! I want to tell you that I\'m allergic to those types of food listed bellow. Be sure you are not using it on my food</string>
    <string name="message_dont_eat">Hi! I want to tell you that I don\'t eat those types of food listed bellow. Be sure you are not using it on my food</string>

    <string name="serious_mode_on_msg">No!! Come on!! Seriously? Why take life so serious? But OK. Let\'s turn this serious mode on :D</string>
    <string name="serious_mode_off_msg">Awesome :D. Life is too good. Let\'s have some fun :D</string>

    <string name="msg_title_vegetarian">Vegetarian</string>
    <string name="msg_title_vegan">Vegan</string>
    <string name="msg_title_joke_cannibal">Cannibal</string>
    <string name="msg_veget">Hi, I\'m vegetarian. I do not eat fish, seafood, poultry or any meat.</string>
    <string name="msg_vegan">Hi, I\'m vegan. I do not eat fish, seafood, poultry, meat or any animal products, including eggs, dairy and honey.</string>
    <string name="msg_joke_cannibal">Hi, I\'m a cannibal. I choose you to be my lunch today, would you like to follow me to the kitchen?</string>
    <string name="image" translatable="false">image</string>

</resources>
