<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_reader"
            android:icon="@drawable/ic_beenhere_black_24dp"
            android:title="@string/nav_menu_reader" />
        <item
            android:id="@+id/nav_food_menu"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/nav_food_menu" />
        <item
            android:id="@+id/nav_order_sheet"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_order_sheet" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/nav_payment" />
        <item
            android:id="@+id/nav_app_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_app_settings" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_adb_black_24dp"
            android:title="@string/nav_about_us" />
    </group>

</menu>
