<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="3">

            <!--
              *******************************
              * Topping
              *******************************
            -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorClaret"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/header_topping"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_header_size" />
            </TableRow>

            <!-- Topping No.1 -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorClassic"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/charsiu_name"
                    android:textAlignment="textStart"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_food_name" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/ivCharSiu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/hakata_ramen_description"
                    android:paddingEnd="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:src="@drawable/ic_ramen_96_hakata" />

                <NumberPicker
                    android:id="@+id/CharSiu_NumberPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>

        </TableLayout>

    </ScrollView>
</RelativeLayout>